[package]
name = "typenummacro"
version = "0.1.0"
authors = ["Borodin Gregory <grihabor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[lib]
proc-macro = true
